# CCORP

./: .env.example  Cargo.toml  LICENSE.md  README.md  config.json
.github/workflows/: pr-check.yml  release.yml
src/: anthropic_to_openai.rs  config.rs  main.rs  models.rs  openai_to_anthropic.rs  openrouter.rs  settings.rs  switch_model.rs
src/templates/: switch_model.html
