[package]
name = "ccorp"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
dotenvy = "0.15.7"
reqwest = { version = "0.12.22", features = ["json", "rustls-tls", "gzip", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
futures-util = "0.3"
async-stream = "0.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
config = { version = "0.14.0", features = ["yaml"] }
minijinja = "2.11.0"
